--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mesto",
   "version": "1.0.0",
   "description": "Lerning platform",
-  "main": "index.js",
+  "main": "./src/pages/index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --stats-children",
     "dev": "webpack serve"
   },
   "repository": {
